--- a/index.html
+++ b/index.html
@@ -95,10 +95,11 @@
       <div class="container section-title" data-aos="fade-up">
         <h2>ANJALI DHARMIK</h2>
             <p>Senior AI Engineer, HP Inc</p>
-            <a href="https://scholar.google.com/citations?user=Lh_09XAAAAAJ&hl=en" class="btn-get-started">Google Scholar</a>
-			<a href="https://scholar.google.com/citations?user=Lh_09XAAAAAJ&hl=en" class="btn-get-started">GitHub</a>
-			<a href="https://scholar.google.com/citations?user=Lh_09XAAAAAJ&hl=en" class="btn-get-started">Kaggle</a>
-			<a href="https://scholar.google.com/citations?user=Lh_09XAAAAAJ&hl=en" class="btn-get-started">LinkedIn</a>
+            <a href="https://scholar.google.com/citations?user=Lh_09XAAAAAJ&hl=en" class="btn-get-started">Google Scholar</a> |
+			<a href="https://github.com/AnjaliDharmik" class="btn-get-started">GitHub</a> |
+			<a href="https://www.linkedin.com/in/anjali-dharmik/" class="btn-get-started">LinkedIn</a> |
+			<a href="https://www.kaggle.com/anjalidharmik92" class="btn-get-started">Kaggle</a> |
+			<a href="https://medium.com/@anjali.dharmik" class="btn-get-started">Medium</a>
       </div><!-- End Section Title -->
 	
 	<!-- About Section -->
